<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

   <!-- //当前登录用户的数字ID
    private int userid;
    //当前登录用户的用户名，值可能为空。
    private String username;
    //用户真实姓名，可能为空。
    private String realname;
    //当前登录用户的头像
    private String portrait;
    //自我简介，可能为空。
    private String userdetail;
    //生日，以yyyy-mm-dd格式显示。
    private String brithday;
    //婚姻状况
    private String marriage;
    //性别。"1"表示男，"0"表示女。
    private String sex;
    //血型
    private String blood;
    //体型
    private String figure;
    //星座
    private String constellation;
    //学历
    private String education;
    //当前职业
    private String trade;
    //职位
    private String job;
    -->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >
    <ImageView
        android:id="@+id/portrait"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/username"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/realname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/realname" />
    <TextView
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/sex" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/birthday" />

    <TextView
        android:id="@+id/marriage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/marriage" />

    <TextView
        android:id="@+id/figure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/figure" />

    <TextView
        android:id="@+id/blood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/blood" />
    <TextView
        android:id="@+id/constellation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/constellation" />

    <TextView
        android:id="@+id/education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/education" />

    <TextView
        android:id="@+id/trade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/trade" />
    <TextView
        android:id="@+id/job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/job" />
    <TextView
        android:id="@+id/userdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="20dp"
        android:text="@string/userdetail" />

</LinearLayout>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/exit" />

</LinearLayout>
